--- a/TimesheetManagementSystem/Views/AccountDetails/UpdateOneAccountDetailForCustomerAccount.cshtml
+++ b/TimesheetManagementSystem/Views/AccountDetails/UpdateOneAccountDetailForCustomerAccount.cshtml
@@ -502,6 +502,9 @@
             return $divElement.html();
         }
 
+        function redirect() {
+            window.location.replace('/AccountDetails/ManageAccountDetailsForOneCustomerAccount/' + window.customerAccountId);
+        }
 
     </script>
 }
