--- a/TimesheetManagementSystem/Views/InstructorAccounts/AssignInstructor.cshtml
+++ b/TimesheetManagementSystem/Views/InstructorAccounts/AssignInstructor.cshtml
@@ -59,13 +59,13 @@
                         </div>
                     </div>
                     @*<div class="form-group">
-                        <label class="control-label col-md-3" for="isCurrentInput">Is current</label>
-                        <div class="col-md-3">
-                            <div class="make-switch" data-on="primary" data-off="info">
-                                <input type="checkbox" id="isCurrentInput" name="isCurrentInput" checked>
+                            <label class="control-label col-md-3" for="isCurrentInput">Is current</label>
+                            <div class="col-md-3">
+                                <div class="make-switch" data-on="primary" data-off="info">
+                                    <input type="checkbox" id="isCurrentInput" name="isCurrentInput" checked>
+                                </div>
                             </div>
-                        </div>
-                    </div>*@
+                        </div>*@
                     <div class="form-group col-md-12">
                         <label class="control-label col-md-1"></label>
                         <div class="col-md-10">
@@ -92,9 +92,9 @@
 
     <script>
         $('#accountNameTextBlock').text(getCustomerAccountNameFromCookie());
-        window.customerAccountId = getCustomerAccountIdFromCookie();
+        //window.customerAccountId = getCustomerAccountIdFromCookie();
 
-        
+
         function getIdFromAddressBar() {
             var urlArray = window.location.href.split('/');
             var id = urlArray[urlArray.length - 1];
@@ -116,8 +116,6 @@
         }
         window.customerAccountId = getIdFromAddressBar();
         $('#goToManageInstructorAccountLink').attr('href', '/InstructorAccounts/ManageInstructorAccount/' + window.customerAccountId);
-
-        //$("[id='isCurrentInput']").bootstrapSwitch();
 
         $('#effectiveStartDateDatePicker')
             .datepicker({
@@ -198,27 +196,41 @@
                     },
                     data: instructorAccount,
                     contentType: 'application/x-www-form-urlencoded',
+
                 })
 
                 $saveDataHandler.done(function (data, textStatus, jqXHR) {
                     var anyAccountDetailRecords = data.anyAccountDetailRecords;
                     if (anyAccountDetailRecords.anyAccountDetailList.length == 0) {
-                        var resultInHTML = '<div style="margin:0px auto" class="top-center" >' + data.message+
+                        var resultInHTML = '<div style="margin:0px auto" class="top-center" >' + data.message +
                             '<br> Warning: There are <b>no Timetable Details</b> made for this Account' + ', Instructor may not be able to generate TimeSheet Data </div>';
-                            /* + data.message + " " + data.anyAccountDetailRecords.message +*/
+                        /* + data.message + " " + data.anyAccountDetailRecords.message +*/
 
-                    new Noty({
-                        theme: 'bootstrap-v3',
-                        text: resultInHTML,
-                        layout: 'top',
-                        
-                        type: 'success',
-                        closeWith: ['click', 'button']
-                        
+                        console.dir("are u workin");
+
+                        new Noty({
+                            theme: 'bootstrap-v3',
+                            text: resultInHTML,
+                            layout: 'top',
+                            type: 'success',
+                            closeWith: ['click', 'button'],
+                            callbacks: {
+                                onClose: function () {
+                                    redirect();
+                                },
+                            },
+
                         }).show();
-                        } else {
-                   new Noty({ theme: 'bootstrap-v3', text: data.message, layout: 'top', type: 'success' }).show();
-               }
+                    } else {
+                        new Noty({
+                            theme: 'bootstrap-v3', text: data.message, layout: 'top', type: 'success',
+                            callbacks: {
+                                onClose: function () {
+                                    redirect();
+                                },
+                            },
+                        }).show();
+                    }
                 });//end of $saveDataHandler.done()
                 $saveDataHandler.fail(function (data, textStatus, jqXHR) {
                     var infoFromServer = data.responseJSON.message;
@@ -235,8 +247,10 @@
             }//if the form is valid.
         });//end of $('#saveButton').on('click', anonymous function)
 
-       
 
+        function redirect() {
+            window.location.replace('/InstructorAccounts/ManageInstructorAccount/' + window.customerAccountId);
+        }
 
         //-------------------- setup client-side validation logic --------------------------------
         //http://stackoverflow.com/questions/18754020/bootstrap-3-with-jquery-validation-plugin
