--- a/TimesheetManagementSystem/Views/UserManager/Update.cshtml
+++ b/TimesheetManagementSystem/Views/UserManager/Update.cshtml
@@ -30,8 +30,7 @@
                     <div class="form-group">
                         <label class="control-label col-md-3" for="roleIdInput">Role</label>
                         <div class="col-md-9">
-                            <select id="roleIdInput" class="form-control input-group-sm">
-                            </select>
+                            <select id="roleIdInput" class="form-control input-group-sm"></select>
                         </div>
                     </div>
                     <div class="form-group">
@@ -60,58 +59,58 @@
     //which will be extracted from the address bar.
     //The variable will be used in the first Ajax() call, to retrieve JSON structured
     //information about the user
-        window.userId = getUserIdFromAddressBar();
-        window.roleIdInputElement = $('#roleIdInput');
+    window.userId = getUserIdFromAddressBar();
+    window.roleIdInputElement = $('#roleIdInput');
     //I need a document scope variable, window.originalRoleName because
     //there are complications to use the UserManager to remove a role from a user and add a role to a user.
     //The reason is, the method are asynchronous.
-    //A lot of spaggheti coding were involved just to get the RoleName. 
-        window.originalRoleName = '';
-        setupRoleListBox();
-        function getUserIdFromAddressBar(){
+    //A lot of spaggheti coding were involved just to get the RoleName.
+    window.originalRoleName = '';
+    setupRoleListBox();
+    function getUserIdFromAddressBar() {
         //Get userid from the url string in the browser's address bar
-            var urlArray = window.location.href.split('/');
-            var userId = urlArray[urlArray.length - 1];
-            return userId;
-        };
-        function setupRoleListBox() {
-            //Note: jQuery.ajax(..) is also often written is $.ajax(..)
-            $loadHandler = jQuery.ajax({
-                type: 'GET',
-                url: '/API/Roles',
-            })
-            $loadHandler.done(function (data, textStatus, jqXHR) {
-                //The (data) input parameter automatically captures the response from the
-                //Get API method
-                //I usually use the following code
-                //to inspect the returned result captured by the data input parameter
-                //from the web server.
-                console.log(data);
+        var urlArray = window.location.href.split('/');
+        var userId = urlArray[urlArray.length - 1];
+        return userId;
+    };
+    function setupRoleListBox() {
+        //Note: jQuery.ajax(..) is also often written is $.ajax(..)
+        $loadHandler = jQuery.ajax({
+            type: 'GET',
+            url: '/API/Roles',
+        })
+        $loadHandler.done(function (data, textStatus, jqXHR) {
+            //The (data) input parameter automatically captures the response from the
+            //Get API method
+            //I usually use the following code
+            //to inspect the returned result captured by the data input parameter
+            //from the web server.
+            console.log(data);
 
-                //After inspecting the data object with the console.log
-                //I have clear picture of the structure and used
-                //the following variable to reference(represent) the data variable.
-                var roleList = data;
+            //After inspecting the data object with the console.log
+            //I have clear picture of the structure and used
+            //the following variable to reference(represent) the data variable.
+            var roleList = data;
 
-                for (index = 0; index < roleList.length; index++) {
-                    role = roleList[index];
-                    roleId = role.roleId;
-                    roleName = role.roleName;
-                    optionElement = $('<option></option', { value: roleId, text: roleName });
-                    window.roleIdInputElement.append(optionElement);
-                }
-                //after setting up the listbox element, call
-                //this method which has another Ajax() call to obtain user details
-                getUserDetails();
-            }//end of JavaScript anonymous function
-            
-   
-            )//end of the done() method;
+            for (index = 0; index < roleList.length; index++) {
+                role = roleList[index];
+                roleId = role.roleId;
+                roleName = role.roleName;
+                optionElement = $('<option></option', { value: roleId, text: roleName });
+                window.roleIdInputElement.append(optionElement);
+            }
+            //after setting up the listbox element, call
+            //this method which has another Ajax() call to obtain user details
+            getUserDetails();
+        }//end of JavaScript anonymous function
 
-        } //end of setupRoleListBox
+
+        )//end of the done() method;
+
+    } //end of setupRoleListBox
     //Note: jQuery.ajax(..) is also often written is $.ajax(..)
 
-    function getUserDetails(){
+    function getUserDetails() {
         $loadHandler = jQuery.ajax({
             type: 'GET',
             url: '/API/UserManager/' + window.userId,
@@ -146,55 +145,69 @@
 
         )//end of the done() method;
     }//end of getUserDetails();
-        function WebFormData(inUserName,inFullName, inEmail, inSelectedRoleName,inOriginalRoleName) {
-            this.userName = inUserName;
-            this.fullName = inFullName;
-            this.email = inEmail;
-            this.selectedRoleName = inSelectedRoleName;
-            this.originalRoleName = inOriginalRoleName;
-        }
-        $('#saveButton').on('click', function () {
-            var collectedUserName = $('#userNameInput').val();
-            var collectedFullName = $('#fullNameInput').val();
-            var collectedEmail = $('#emailInput').val();
-          
-            var collectedRoleName = $("#roleIdInput option:selected").text();
-            var webFormData = new WebFormData(collectedUserName,collectedFullName,
-                collectedEmail, collectedRoleName, window.originalRoleName);
-            var webFormDataInString = JSON.stringify(webFormData);
+    function WebFormData(inUserName, inFullName, inEmail, inSelectedRoleName, inOriginalRoleName) {
+        this.userName = inUserName;
+        this.fullName = inFullName;
+        this.email = inEmail;
+        this.selectedRoleName = inSelectedRoleName;
+        this.originalRoleName = inOriginalRoleName;
+    }
+    $('#saveButton').on('click', function () {
+        var collectedUserName = $('#userNameInput').val();
+        var collectedFullName = $('#fullNameInput').val();
+        var collectedEmail = $('#emailInput').val();
 
-            $updateUserHandler = jQuery.ajax({
-                type: 'PUT',
-                url: '/API/UserManager/' + window.userId,
-                dataType: 'json',
-                contentType: 'application/json;',
-                data: "'" + webFormDataInString + "'"
-            })
-            $updateUserHandler.done(function (data, textStatus, jqXHR) {
-                if (data.status == "success") {
-                    noty({
-                        text: data.message, type: 'success',
-                        dismissQueue: true,
-                        layout: 'center'
-                    });
-                } else {
-                    noty({
-                        text: data.message, type: 'error',
-                        dismissQueue: true,
-                        layout: 'center'
-                    })
+        var collectedRoleName = $("#roleIdInput option:selected").text();
+        var webFormData = new WebFormData(collectedUserName, collectedFullName,
+            collectedEmail, collectedRoleName, window.originalRoleName);
+        var webFormDataInString = JSON.stringify(webFormData);
 
-                }
-            });
-            $updateUserHandler.fail(function (data, textStatus, jqXHR) {
-                console.log('executed when runtime error on server side occurred');
-                noty({ text: data,
-                    type: 'error' ,
+        $updateUserHandler = jQuery.ajax({
+            type: 'PUT',
+            url: '/API/UserManager/' + window.userId,
+            dataType: 'json',
+            contentType: 'application/json;',
+            data: "'" + webFormDataInString + "'"
+        })
+        $updateUserHandler.done(function (data, textStatus, jqXHR) {
+            if (data.status == "success") {
+                new Noty({
+                    text: data.message, type: 'success',
                     dismissQueue: true,
-                    layout: 'center' })
-            });
+                    layout: 'center',
+                    closeWith: ['click', 'button'],
+                    callbacks: {
+                        onClose: function () {
+                            redirect();
+                        },
+                    },
+                }).show();
+            } else {
+                new Noty({
+                    text: data.message, type: 'error',
+                    dismissQueue: true,
+                    layout: 'center'
+                }).show();
 
+            }
         });
+        $updateUserHandler.fail(function (data, textStatus, jqXHR) {
+            console.log('executed when runtime error on server side occurred');
+            noty({
+                text: data,
+                type: 'error',
+                dismissQueue: true,
+                layout: 'center'
+            }).show();
+        });
+
+    });
+
+    //redirect to UserManager
+    function redirect() {
+        window.location.replace('/UserManager/Index');
+    }
+
 
 </script>
 
